--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <html>
   <head>
     <title>vacation-ending</title>
+
+    <style>
+      div{
+        border:10px solid green;
+        font-size:60px;
+      }
+      @media(max-width:800px) {
+        div{
+          display:none;
+        }
+      }
+    </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123711619-1"></script>
     <script>
