--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vacation-ending</title>
+    <title>영동중학생들은클릭하지마시오</title>
 
     <style>
       div{
@@ -35,7 +35,7 @@
     <p><img src="아구몬.jpg"></p>
 
     <p>
-    <audio src="안녕디지몬1분.mp3" controls autoplay>your brower does not support the audio element.</audio>
+    <audio src="안녕디지몬1분.mp3" autoplay loop id="playaudio">your brower does not support the audio element.</audio>
   </p>
 
 
